# trace-tally

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
assets/: demo.tape
examples/: basic.rs  cargo.rs  ci.rs  inline.rs  progress.rs  render_loop.rs  spinner.rs  tokio.rs  tracing.rs  tree.rs
src/: lib.rs  runner.rs  task.rs  test.rs  tracing.rs  view.rs  writer.rs
src/tracing/: channel.rs  inline.rs  layer.rs  mod.rs
src/util/: mod.rs  progress_bar.rs  spinner.rs  tree_indent.rs
src/widgets/: progress_bar.rs  spinner.rs
