[package]
name = "trace-tally"
version = "0.0.0-alpha.6"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Pingid/trace-tally"
authors = ["Dan Beaven"]
description = "A tracing layer for rendering hierarchical task trees to the terminal"
keywords = ["tracing", "logging", "terminal", "tree", "subscriber"]
categories = ["development-tools::debugging", "command-line-interface"]

[dependencies]
indexmap = "2.13.0"

tracing = { version = "0.1.44", optional = true }
tracing-subscriber = { version = "0.3.22", optional = true }

[features]
default = ["tracing"]
tracing = ["dep:tracing", "dep:tracing-subscriber"]

[[example]]
name = "basic"
required-features = ["tracing"]

[[example]]
name = "render_loop"
required-features = ["tracing"]

[[example]]
name = "tree"
required-features = ["tracing"]

[[example]]
name = "progress"
required-features = ["tracing"]

[[example]]
name = "tokio"
required-features = ["tracing"]

[[example]]
name = "ci"
required-features = ["tracing"]

[dev-dependencies]
owo-colors = "4"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] }
